--- a/hhtlibrary/build.gradle
+++ b/hhtlibrary/build.gradle
@@ -4,14 +4,12 @@ plugins {
 
 android {
     namespace 'co.za.eentries.hhtlibrary'
-    compileSdk 30
+    compileSdk 34
 
     defaultConfig {
        // applicationId "co.za.eentries.hhtlibrary"
-        minSdk 16
-        targetSdk 30
-        versionCode 1
-        versionName "1.0"
+        minSdk 21
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -26,14 +24,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        aidl true
+    }
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.activity:activity:1.8.0'
+
 
     //implementation 'androidx.appcompat:appcompat:1.6.1'
     //implementation 'com.google.android.material:material:1.10.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation files('libs\\printer.jar')
+    //implementation files('libs\\printer.jar')
 }
