--- a/hhtlibrary/src/main/AndroidManifest.xml
+++ b/hhtlibrary/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="co.za.eentries.hhtlibrary">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
+    <queries>
+        <package android:name="net.nyx.printerservice" />
+    </queries>
+
+    <application>
+        <activity
+            android:name=".scanner.CameraScanner"
+            android:exported="false" />
+    </application>
+
 </manifest>
